<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.aicodix.rattlegram.MainActivity">
	<item
		android:id="@+id/action_ping"
		android:icon="@drawable/ic_baseline_notifications_none_24"
		android:title="@string/ping"
		app:iconTint="@color/tint"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />
	<item
		android:id="@+id/action_compose"
		android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
		android:title="@string/compose"
		app:iconTint="@color/tint"
		app:showAsAction="always" />
	<item android:title="@string/encoder_settings">
		<menu>
			<item android:title="@string/sample_rate">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_output_rate_8000"
							android:title="@string/rate_8000" />
						<item
							android:id="@+id/action_set_output_rate_16000"
							android:title="@string/rate_16000" />
						<item
							android:id="@+id/action_set_output_rate_32000"
							android:title="@string/rate_32000" />
						<item
							android:id="@+id/action_set_output_rate_44100"
							android:title="@string/rate_44100" />
						<item
							android:id="@+id/action_set_output_rate_48000"
							android:title="@string/rate_48000" />
					</group>
				</menu>
			</item>
			<item android:title="@string/channel_select">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_output_channel_default"
							android:title="@string/channel_default" />
						<item
							android:id="@+id/action_set_output_channel_first"
							android:title="@string/channel_first" />
						<item
							android:id="@+id/action_set_output_channel_second"
							android:title="@string/channel_second" />
						<item
							android:id="@+id/action_set_output_channel_analytic"
							android:title="@string/channel_analytic" />
					</group>
				</menu>
			</item>
			<item android:title="@string/leading_noise">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_disable_noise"
							android:title="@string/disable" />
						<item
							android:id="@+id/action_set_noise_quarter_second"
							android:title="@string/quarter_second" />
						<item
							android:id="@+id/action_set_noise_half_second"
							android:title="@string/half_second" />
						<item
							android:id="@+id/action_set_noise_one_second"
							android:title="@string/one_second" />
						<item
							android:id="@+id/action_set_noise_two_seconds"
							android:title="@string/two_seconds" />
						<item
							android:id="@+id/action_set_noise_four_seconds"
							android:title="@string/four_seconds" />
					</group>
				</menu>
			</item>
			<item android:title="@string/fancy_header">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_enable_fancy_header"
							android:title="@string/enable" />
						<item
							android:id="@+id/action_disable_fancy_header"
							android:title="@string/disable" />
					</group>
				</menu>
			</item>
			<item
				android:id="@+id/action_set_carrier_frequency"
				android:title="@string/carrier_frequency" />
		</menu>
	</item>
	<item android:title="@string/decoder_settings">
		<menu>
			<item android:title="@string/sample_rate">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_record_rate_8000"
							android:title="@string/rate_8000" />
						<item
							android:id="@+id/action_set_record_rate_16000"
							android:title="@string/rate_16000" />
						<item
							android:id="@+id/action_set_record_rate_32000"
							android:title="@string/rate_32000" />
						<item
							android:id="@+id/action_set_record_rate_44100"
							android:title="@string/rate_44100" />
						<item
							android:id="@+id/action_set_record_rate_48000"
							android:title="@string/rate_48000" />
					</group>
				</menu>
			</item>
			<item android:title="@string/channel_select">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_record_channel_default"
							android:title="@string/channel_default" />
						<item
							android:id="@+id/action_set_record_channel_first"
							android:title="@string/channel_first" />
						<item
							android:id="@+id/action_set_record_channel_second"
							android:title="@string/channel_second" />
						<item
							android:id="@+id/action_set_record_channel_summation"
							android:title="@string/channel_summation" />
						<item
							android:id="@+id/action_set_record_channel_analytic"
							android:title="@string/channel_analytic" />
					</group>
				</menu>
			</item>
			<item android:title="@string/audio_source">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_source_default"
							android:title="@string/source_default" />
						<item
							android:id="@+id/action_set_source_microphone"
							android:title="@string/source_microphone" />
						<item
							android:id="@+id/action_set_source_camcorder"
							android:title="@string/source_camcorder" />
						<item
							android:id="@+id/action_set_source_voice_recognition"
							android:title="@string/source_voice_recognition" />
						<item
							android:id="@+id/action_set_source_unprocessed"
							android:title="@string/source_unprocessed" />
					</group>
				</menu>
			</item>
			<item
				android:id="@+id/action_show_spectrum"
				android:title="@string/spectrum_analyzer" />
		</menu>
	</item>
	<item android:title="@string/repeater_mode">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/action_enable_repeater_mode"
					android:title="@string/enable" />
				<item
					android:id="@+id/action_disable_repeater_mode"
					android:title="@string/disable" />
			</group>
		</menu>
	</item>
	<item android:title="@string/night_mode">
		<menu>
			<item
				android:id="@+id/action_enable_night_mode"
				android:title="@string/enable" />
			<item
				android:id="@+id/action_disable_night_mode"
				android:title="@string/disable" />
		</menu>
	</item>
	<item android:title="@string/danger_zone">
		<menu>
			<item
				android:id="@+id/action_delete_messages"
				android:title="@string/delete_messages" />
			<item
				android:id="@+id/action_enable_ultrasonic"
				android:title="@string/enable_ultrasonic" />
			<item
				android:id="@+id/action_force_quit"
				android:title="@string/force_quit" />
		</menu>
	</item>
	<item
		android:id="@+id/action_edit_call_sign"
		android:title="@string/call_sign" />
	<item
		android:id="@+id/action_privacy_policy"
		android:title="@string/privacy_policy" />
	<item
		android:id="@+id/action_about"
		android:title="@string/about" />
</menu>
